Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-12005

ListView section.property doesn't work when the model comes from C++

XMLWordPrintable

    • b6251d31652232a6ac3a5dff54ad4229542089b1

      We have a ListView whose model is a QList<QObject*>, it works perfectly.

      However, when we try to use the new section feature from ListView, setting section.property doesn't work : it can't find the property from our model. We have tried with section.property: "myProperty", section.property: "modelData.myProperty", etc...

      If we use a ListModel, however, no problems

        1. QtBug12005.zip
          4 kB
          Gregory Schlomoff
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            martjone Martin Jones (closed Nokia identity) (Inactive)
            gregschlom Gregory Schlomoff
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes