Fix ListView sections with QList<QObject*> QDeclarativeVisualDataModel::stringValue() did not handle QList<QObject*> model types.

Task-number: QTBUG-12005
(cherry picked from commit b6251d31652232a6ac3a5dff54ad4229542089b1)